--- a/invoice.html
+++ b/invoice.html
@@ -229,16 +229,17 @@
         
         <div class="header">
             <div class="logo-box">
-                <div class="logo-text serif">CORNICHE</div>
-                <div class="logo-sub">International Couriers</div>
+                <div class="logo-text serif">FAST LINE</div>
+                <div class="logo-sub">Express BD</div>
             </div>
 
             <div class="company-info serif">
-                <h1 class="company-name">CORNICHE INTERNATIONAL LIMITED</h1>
+                <h1 class="company-name">Fast Line Express BD</h1>
                 <div class="contact-details">
-                    Tel: (852) 2754 8600 &nbsp;&nbsp; Fax: (852) 2754 8611<br>
-                    E-mail: customer@corniche.com.hk<br>
-                    https://www.corniche.com.hk
+                    New Shahi Packaging & Poly Industries Ltd<br>
+                    Boro Beraid, Badda, Dhaka, Bangladesh<br>
+                    Tel: +880 1234-567891<br>
+                    E-mail: info@fastlineexpress.com
                 </div>
             </div>
 
