--- a/manifast.html
+++ b/manifast.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CORNICHE INTERNATIONAL LTD - Manifest</title>
+    <title>Fast Line Express BD - Manifest</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="manifest-wrapper">
     <header class="main-header">
-        <h1>CORNICHE INTERNATIONAL LTD</h1>
+        <h1>Fast Line Express BD</h1>
+        <h2>New Shahi Packaging & Poly Industries Ltd</h2>
         <h2>MANIFEST</h2>
     </header>
 
